# three_body_bevy

./: Cargo.toml
src/: cursor.rs  main.rs  simulation.rs
